--- a/client/src/css/settings/_settings-colors.scss
+++ b/client/src/css/settings/_settings-colors.scss
@@ -1,9 +1,8 @@
 $colors: (
-    primary: #005dff,
-    primary-light: lighten(#005dff, 40%),
-    primary-dark: darken(#005dff, 40%),
-    accent: #fff6bb,
-    secondary-800:red
+    primary: #fff6bb,
+   
+    secondary-200:#759302,
+    secondary:#5A6B01,
 );
 
 @function color($color-name) {
