--- a/client/src/styles/components/_components-page.scss
+++ b/client/src/styles/components/_components-page.scss
@@ -2,7 +2,7 @@
     display:grid;
     grid-template-rows:400px 1fr 100px;
     width:100%;  
-    @include desktop{
-     grid-template-rows:400px 1fr 200px;
-    }
+    // @include desktop{
+    //  grid-template-rows:400px 1fr 100px;
+    // }
 }
