--- a/client/src/styles/components/home/_components-category-card.scss
+++ b/client/src/styles/components/home/_components-category-card.scss
@@ -1,5 +1,5 @@
-
-@import "./../../settings/settings-shadows";
+@import "../../settings/settings-colors";
+@import "../../settings/settings-shadows";
 
 .category-card {
     display: flex;
@@ -8,7 +8,7 @@
     margin: 0 auto;
     position: relative;
     margin-top: 10px;
-    border:2px solid #8aa327fa;
+    border:2px solid map-get($colors, secondary-300);
     border-radius: 10px;
     box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
    overflow: hidden;
@@ -28,7 +28,7 @@
         flex-direction: column;
         min-height: 200px;       
         align-items: center;       
-        background-color: #fcfcd6;
+        background-color: map-get($colors, primary-100);
         @include desktop {
             min-height: 60px;
             display: flex;
@@ -40,7 +40,7 @@
             margin-bottom: 20px;
         }
         h4 {
-            color: #8aa327fa;
+            color: map-get($colors, secondary-300);
             font-size: 16px;
         }
        
