--- a/client/src/styles/components/home/_components-intro.scss
+++ b/client/src/styles/components/home/_components-intro.scss
@@ -1,3 +1,4 @@
+@import "../../settings/settings-colors";
 .intro {
     background-image: url(../../../assets/images/intro-image.jpg);
     height: 100%;
@@ -10,13 +11,13 @@
     h3 {
         padding-top: 13px;
         margin: 0;
-        color: #e2d3a0;
+        color: map-get($colors, primary-200);
         font-size: 26px;
     }
     p {
         padding: 0;
         margin: 0;
-        color: #e2d3a0;
+        color: map-get($colors, primary-200);
     }
     .logo {
         position: absolute;
