--- a/client/src/main.css
+++ b/client/src/main.css
@@ -562,12 +562,15 @@ img {
     padding: 8px 16px;
     text-decoration: none;
     margin: 0;
+    -webkit-transition: color 0.5s ease-out;
+    transition: color 0.5s ease-out;
   }
 }
 
 .btn--main:hover {
   color: #687A1C;
   border: 1px solid #687A1C;
+  text-decoration: underline;
 }
 
 .header-wrapper {
@@ -606,17 +609,21 @@ img {
   padding: 0;
 }
 
+.header-wrapper .dropdown__items a {
+  text-decoration: none;
+}
+
+.header-wrapper .dropdown__items a:nth-child(6) span,
+.header-wrapper .dropdown__items a:nth-child(7) span {
+  color: #14B42E;
+}
+
 .header-wrapper .dropdown__item {
   list-style: none;
-  padding: 16px;
+  padding: 14px;
 }
 
-.header-wrapper .dropdown__item:nth-child(5) a,
-.header-wrapper .dropdown__item:nth-child(6) a {
-  color: #00ff2a;
-}
-
-.header-wrapper .dropdown__item a {
+.header-wrapper .dropdown__item span {
   text-decoration: none;
   text-transform: uppercase;
   color: #fff6bb;
@@ -706,28 +713,6 @@ img {
   }
 }
 
-.navbar__item a {
-  text-decoration: none;
-  text-transform: uppercase;
-  color: #759302;
-  padding: 18px;
-  font-size: 16px;
-  -webkit-transition: color 0.5s ease-out;
-  transition: color 0.5s ease-out;
-}
-
-@media (min-width: 840px) {
-  .navbar__item a {
-    padding: 0;
-  }
-}
-
-.navbar__item a:hover {
-  cursor: pointer;
-  color: #3C0901;
-  text-decoration: underline;
-}
-
 .navbar__items {
   display: none;
   -webkit-box-orient: vertical;
@@ -763,6 +748,29 @@ img {
     opacity: 0.8;
     top: 246px;
     height: 60px;
+  }
+  .navbar__items a {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #759302;
+    padding: 18px;
+    font-size: 16px;
+    -webkit-transition: color 0.5s ease-out;
+    transition: color 0.5s ease-out;
+  }
+}
+
+@media (min-width: 840px) and (min-width: 840px) {
+  .navbar__items a {
+    padding: 0;
+  }
+}
+
+@media (min-width: 840px) {
+  .navbar__items a:hover {
+    cursor: pointer;
+    color: #3C0901;
+    text-decoration: underline;
   }
 }
 
@@ -938,28 +946,6 @@ img {
   }
 }
 
-.navbar__item a {
-  text-decoration: none;
-  text-transform: uppercase;
-  color: #759302;
-  padding: 18px;
-  font-size: 16px;
-  -webkit-transition: color 0.5s ease-out;
-  transition: color 0.5s ease-out;
-}
-
-@media (min-width: 840px) {
-  .navbar__item a {
-    padding: 0;
-  }
-}
-
-.navbar__item a:hover {
-  cursor: pointer;
-  color: #3C0901;
-  text-decoration: underline;
-}
-
 .navbar__items {
   display: none;
   -webkit-box-orient: vertical;
@@ -995,6 +981,29 @@ img {
     opacity: 0.8;
     top: 246px;
     height: 60px;
+  }
+  .navbar__items a {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #759302;
+    padding: 18px;
+    font-size: 16px;
+    -webkit-transition: color 0.5s ease-out;
+    transition: color 0.5s ease-out;
+  }
+}
+
+@media (min-width: 840px) and (min-width: 840px) {
+  .navbar__items a {
+    padding: 0;
+  }
+}
+
+@media (min-width: 840px) {
+  .navbar__items a:hover {
+    cursor: pointer;
+    color: #3C0901;
+    text-decoration: underline;
   }
 }
 
@@ -1193,17 +1202,7 @@ img {
 
 .header-btn {
   position: absolute;
-  top: 75%;
-  left: 2%;
-  width: 190px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
-  width: 100px;
+  display: none;
 }
 
 @media (min-width: 840px) {
@@ -1223,6 +1222,9 @@ img {
         -ms-flex-pack: justify;
             justify-content: space-between;
     font-size: 16px;
+  }
+  .header-btn a {
+    text-decoration: none;
   }
 }
 
