--- a/client/src/styles/components/_components-buttons.scss
+++ b/client/src/styles/components/_components-buttons.scss
@@ -46,10 +46,12 @@
             padding: 8px 16px;
             text-decoration: none;
             margin: 0;
+            transition: color 0.5s ease-out;
         }
         &:hover {
             color: map-get($colors,secondary-100);
             border: 1px solid map-get($colors,secondary-100);
+            text-decoration: underline;
         }
     }  
 }
