--- a/client/src/styles/components/_components-header.scss
+++ b/client/src/styles/components/_components-header.scss
@@ -21,15 +21,18 @@
         }
         &__items {
             padding: 0;
+            a{
+                text-decoration: none;
+                &:nth-child(6) span,
+                &:nth-child(7) span {
+                    color: map-get($colors, secondary-400);
+                }
+            }
         }
         &__item {
             list-style: none;
-            padding: 16px;
-            &:nth-child(5) a,
-            &:nth-child(6) a {
-                color: rgb(0, 255, 42);
-            }
-            a {
+            padding: 14px;           
+            span {
                 text-decoration: none;
                 text-transform: uppercase;
                 color: #fff6bb;
