--- a/client/src/styles/components/home/_components-intro.scss
+++ b/client/src/styles/components/home/_components-intro.scss
@@ -56,12 +56,7 @@
 }
 .header-btn {
     position: absolute;
-    top: 75%;
-    left: 2%;
-    width: 190px;
-    display: flex;
-    flex-flow: column;
-    width: 100px; 
+   display: none;
     @include desktop {
         position: absolute;
         top: 75%;
@@ -71,5 +66,9 @@
         flex-flow: row;
         justify-content: space-between;
         font-size: 16px;
+        a{
+            text-decoration: none;
+           
+        }
     }
 }
