--- a/client/src/styles/settings/_settings-colors.scss
+++ b/client/src/styles/settings/_settings-colors.scss
@@ -7,6 +7,7 @@ $colors: (
     secondary-100:#687A1C,
     secondary-200: #759302,
     secondary-300:#8aa327fa,
+    secondary-400:#14B42E,
     
     bordeaux:#3C0901,
 );
