--- a/client/src/styles/components/home/_components-category-card.scss
+++ b/client/src/styles/components/home/_components-category-card.scss
@@ -44,7 +44,7 @@
             font-size: 16px;
         }
        
-        &__statistics {
+        &__statistic {
             display: flex;
             flex-direction: row;
             width: 100%;
