--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -24,3 +24,6 @@
 @import'./styles/components/home/components-intro';
 @import'./styles/components/home/components-main';
 @import'./styles/components/home/components-category-card';
+
+@import'./styles/components/recipes/_components-recipe-card';
+@import'./styles/components/recipes/_components-recipesContainer';
