--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -27,3 +27,4 @@
 
 @import'./styles/components/recipes/_components-recipe-card';
 @import'./styles/components/recipes/_components-recipesContainer';
+@import'./styles/components/recipes/components-category-navigation';
