--- a/client/src/main.css
+++ b/client/src/main.css
@@ -509,7 +509,7 @@ img {
   border-radius: 100px;
   border: none;
   outline: none;
-  padding: 10px 20px;
+  padding: 5px 20px;
   text-transform: uppercase;
 }
 
@@ -1439,6 +1439,17 @@ img {
   justify-items: center;
 }
 
+.recipes-wrapper span {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+  font-family: 'Indie-Flower', cursive;
+  font-size: 20px;
+  color: #5a6b01;
+  padding-top: 20px;
+  padding-bottom: 30px;
+}
+
 @media (min-width: 600px) and (max-width: 1200px) {
   .recipes-wrapper {
     -ms-grid-columns: 50% 50%;
@@ -1451,12 +1462,22 @@ img {
     -ms-grid-columns: 33% 33% 33%;
         grid-template-columns: 33% 33% 33%;
   }
+  .recipes-wrapper span {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
+    grid-column: 1/4;
+  }
 }
 
 @media (min-width: 1200px) {
   .recipes-wrapper {
     -ms-grid-columns: 25% 25% 25% 25%;
         grid-template-columns: 25% 25% 25% 25%;
+  }
+  .recipes-wrapper span {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 4;
+    grid-column: 1/5;
   }
 }
 
