--- a/client/src/styles/components/recipes/_components-recipesContainer.scss
+++ b/client/src/styles/components/recipes/_components-recipesContainer.scss
@@ -3,14 +3,28 @@
     display: grid;
     grid-template-columns: 1fr;
     justify-items: center;
+    & span{
+        grid-column: 1/3;
+        font-family: 'Indie-Flower', cursive;
+        font-size: 20px;
+        color: #5a6b01;
+        padding-top: 20px;
+        padding-bottom: 30px;
+    }
     @include for-tablet-and-laptop {
         grid-template-columns: 50% 50%;       
     }
     @include desktop {
-        grid-template-columns: 33% 33% 33%;      
+        grid-template-columns: 33% 33% 33%; 
+        & span{           
+            grid-column: 1/4;
+        }  
     }
 
     @include for-desktop-up {
-        grid-template-columns: 25% 25% 25% 25%;        
+        grid-template-columns: 25% 25% 25% 25%; 
+        & span{           
+            grid-column: 1/5;
+        }  
     }
 }
