--- a/client/src/components/Errors/_NotFound.scss
+++ b/client/src/components/Errors/_NotFound.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     width:100%;
+    height: 80Vh;
     margin: 0 auto;
     background-color:map-get($colors, primary );
 
