--- a/client/src/main.css
+++ b/client/src/main.css
@@ -506,7 +506,7 @@ img {
 .btn {
   -webkit-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
           box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
-  border-radius: 100px;
+  border-radius: 5px;
   border: none;
   outline: none;
   padding: 5px 20px;
@@ -1348,6 +1348,7 @@ img {
   -webkit-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
           box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
   overflow: hidden;
+  height: 220px;
 }
 
 @media (min-width: 840px) {
@@ -1384,15 +1385,22 @@ img {
 .recipe-card__heading {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 65% 35%;
-      grid-template-columns: 65% 35%;
+  -ms-grid-columns: 208px 68px;
+      grid-template-columns: 208px 68px;
   -ms-flex-pack: distribute;
       justify-content: space-around;
 }
 
 .recipe-card__heading__img {
-  max-width: 170px;
-  height: auto;
+  width: 180px;
+  max-height: 110px;
+}
+
+.recipe-card__heading__img img {
+  width: 180px;
+  max-height: 110px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .recipe-card__statistic {
@@ -1439,7 +1447,7 @@ img {
   justify-items: center;
 }
 
-.recipes-wrapper span {
+.recipes-wrapper__message {
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-column: 1/3;
@@ -1485,15 +1493,14 @@ img {
   background-color: #fff6bb;
 }
 
-.recipes ul {
-  background-color: #fff6bb;
+.recipes .category-items {
   margin: 0 auto;
   padding: 5px 0;
   width: 50%;
   padding-bottom: 30px;
 }
 
-.recipes ul a {
+.recipes .category-items a {
   text-decoration: none;
   list-style: none;
   color: #759302;
@@ -1501,16 +1508,20 @@ img {
   transition: color 0.5s ease-out;
 }
 
-.recipes ul a:hover {
+.recipes .category-items a:hover {
   color: #3c0901;
   text-decoration: underline;
 }
 
-.recipes ul a li {
+.recipes .category-items a .category-item {
   text-align: center;
 }
 
-.recipes ul a li:hover {
+.recipes .category-items a .category-item:hover {
   background-color: #f0d57c;
+}
+
+.active {
+  color: #3c0901 !important;
 }
 /*# sourceMappingURL=main.css.map */
