--- a/client/src/styles/components/recipes/_components-category-navigation.scss
+++ b/client/src/styles/components/recipes/_components-category-navigation.scss
@@ -1,47 +1,12 @@
-// .category-items {
-//     display: flex;
-//     // flex-direction: column;
-//     align-items: center;
-//     background-color: #fff6bb;
-//     margin: 0 auto;
-//     padding: 0;
-//     text-transform: uppercase;
-//     justify-content: center;
-//     a {
-//         text-decoration: none;
-//         padding:5px;
-
-//     }
-// }
-// .category-items{
-
-//     list-style: none;
-
-//     span{
-//         font-size: 10px;
-//         background-color: green;
-//         color:white;
-//         padding:5px 5px;
-//         border-radius: 5px;
-//         &:hover{
-//            color: hotpink;
-//         }
-//     }
-
-// }
-// .active {
-//    background-color: greenyellow;
-// }
 .recipes {
     background-color: #fff6bb;
-    ul {
-        background-color: #fff6bb;
+    .category-items {     
         margin: 0 auto;
         padding: 5px 0;
         width: 50%;
         padding-bottom:30px;
        
-        a {
+        a {            
             text-decoration: none;
             list-style: none;
             color:rgb(117, 147, 2);
@@ -50,14 +15,20 @@
                 color: rgb(60, 9, 1);
                 text-decoration: underline;
             }
-           
-           li{
+        
+            .category-item{
                text-align: center;
                &:hover{
                    background-color: #f0d57c;
                    
                }
+            
            }
         }
     } 
+}
+.active{   
+     color: rgb(60, 9, 1)!important;
+  
+     
 }
