--- a/client/src/styles/settings/_settings-colors.scss
+++ b/client/src/styles/settings/_settings-colors.scss
@@ -8,9 +8,11 @@ $colors: (
     secondary-200: #759302,
     secondary-300:#8aa327fa,
     secondary-400:#14B42E,
+    secondary-500: #aada0d,
 
 
     yellow-100:#e9db1bfa,
+    yellow-200:#FDB200,
     orange:#FF4800,
     bordeaux:#3C0901,
 );
