--- a/client/src/styles/components/_components-navigation.scss
+++ b/client/src/styles/components/_components-navigation.scss
@@ -8,7 +8,7 @@
     grid-template-columns: 1fr;
     justify-items: center;
     background-color: map-get($colors, primary);
-    position: relative;   
+    position: relative;
     @include desktop {
         grid-template-columns: 60% 40%;
         padding: 20px 0;
@@ -41,7 +41,7 @@
         //     }
 
         //     &:hover {
-        //         cursor: pointer;               
+        //         cursor: pointer;
         //         color:map-get($colors, bordeaux);
         //         text-decoration: underline;
         //     }
@@ -53,8 +53,8 @@
         flex-direction: column;
         align-items: center;
         padding: 0;
-        justify-content: center;      
-        width: 100%;       
+        justify-content: center;
+        width: 100%;
         top: 0;
         right: 0;
         left: 0;
@@ -63,7 +63,7 @@
         @include desktop {
             display: flex;
             flex-direction: row;
-            justify-content: flex-end;         
+            justify-content: flex-end;
             opacity: 0.8;
             top: 246px;
             height: 60px;
@@ -77,10 +77,10 @@
                 @include desktop {
                     padding: 0;
                 }
-    
+
                 &:hover {
-                    cursor: pointer;               
-                    color:map-get($colors, bordeaux);
+                    cursor: pointer;
+                    color: map-get($colors, bordeaux);
                     text-decoration: underline;
                 }
             }
@@ -90,61 +90,60 @@
         display: inline-block;
         position: absolute;
         top: left;
-        right: 10px;       
+        right: 10px;
         bottom: 335px;
         @include desktop {
             display: none;
         }
     }
 }
-.search-box {
-    display: flex;
-    background-color: map-get($colors,primary);
-    align-items: center; 
-    margin-top:30px;
-    @include desktop {  
-        margin-top: 0;      
-        justify-content: end;
-        border-radius: 40px;
-        background-color:map-get($colors, primary);      
-    }
+// .search-box {
+//     display: flex;
+//     background-color: map-get($colors, primary);
+//     align-items: center;
+//     margin-top: 30px;
+//     @include desktop {
+//         margin-top: 0;
+//         justify-content: end;
+//         border-radius: 40px;
+//         background-color: map-get($colors, primary);
+//     }
 
-    &__search-image {
-        display: inline-block;
-        width: 20px;
-        height: 20px;
-        @include desktop {
-            display: inline-block;
-            width: 20px;
-            height: 20px;
-        }
-        &:hover {
-            width: 22px;
-            height: 22px;
-        }
-    }
-    &__search-txt {
-        width: 300px;
-        padding: 0 5px;
-        border: 1px solid map-get($colors, secondary-200);
-        border-radius: 50px;
-        align-self: center;
-        margin-right: 5px;
-        padding-left: 20px;
-        background-color: map-get($colors, primary-100);
-        color: map-get($colors, secondary-200);     
-        outline: none;        
-        font-size: 16px;       
-        line-height: 35px;       
-    }
-    &__search-button {
-        display: flex;
-        flex-direction: column;
-    }
-}
+//     &__search-image {
+//         display: inline-block;
+//         width: 20px;
+//         height: 20px;
+//         @include desktop {
+//             display: inline-block;
+//             width: 20px;
+//             height: 20px;
+//         }
+//         &:hover {
+//             width: 22px;
+//             height: 22px;
+//         }
+//     }
+//     &__search-txt {
+//         width: 280px;
+//         padding: 0 5px;
+//         border: 1px solid map-get($colors, secondary-200);
+//         border-radius: 50px;
+//         align-self: center;
+//         margin-right: 5px;
+//         padding-left: 20px;
+//         background-color: map-get($colors, primary-100);
+//         color: map-get($colors, secondary-200);
+//         outline: none;
+//         font-size: 15px;
+//         line-height: 30px;
+//     }
+//     &__search-button {
+//         display: flex;
+//         flex-direction: column;
+//     }
+// }
 
 // .active {
 //     display: grid;
-//     justify-content: stretch;   
+//     justify-content: stretch;
 // }
-
