--- a/client/src/styles/settings/_settings-colors.scss
+++ b/client/src/styles/settings/_settings-colors.scss
@@ -2,6 +2,7 @@ $colors: (
     primary: #fff6bb,
     primary-100: #fcfcd6,
     primary-200:#e2d3a0,
+    primary-300:#F6E094,
 
     secondary: #5a6b01,
     secondary-100:#687A1C,
