--- a/client/src/components/Header/Logo/_Logo.scss
+++ b/client/src/components/Header/Logo/_Logo.scss
@@ -3,8 +3,16 @@
  .logo {
     position: absolute;
     top: 230px;
-
     padding-left: 10px;
+    p {
+     
+        a{
+            font-weight: 100;
+            text-decoration: none;
+            color: map-get($colors, primary );
+            font-size: 16px;
+        }
+    }
     @include desktop {
         display: inline-block;
         padding-left: 25px;
@@ -14,7 +22,7 @@
             font-size: 26px;
         }
         p {
-            padding-top: 10px;
+            padding-top: 10px;          
         }
     }
     .app-logo {
