--- a/client/src/styles/components/recipes/_components-recipe-card.scss
+++ b/client/src/styles/components/recipes/_components-recipe-card.scss
@@ -24,6 +24,11 @@
         }
         p {
             font-size: 10px;
+            width: 200px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;          
+          
         }
         a:hover {
             text-decoration: underline;
