--- a/client/src/main.css
+++ b/client/src/main.css
@@ -1064,6 +1064,10 @@ img {
 
 .recipe-card__description p {
   font-size: 10px;
+  width: 200px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .recipe-card__description a:hover {
