--- a/client/src/components/Recipes/RecipeDetails/_RecipeDetails.scss
+++ b/client/src/components/Recipes/RecipeDetails/_RecipeDetails.scss
@@ -1,70 +1,83 @@
 @import "../../../styles/settings/settings-shadows";
 @import "../../../styles/settings/settings-colors";
 @import "../../../styles/settings/settings-breakpoints";
-
-.recipe-card-details {
-    display: grid;
-    width: 280px;
-    margin: 10px auto;
-    grid-template-rows: 110px 150px;
-    border: 2px solid map-get($colors, secondary-300);
-    border-radius: 10px;
-    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
-    height: 300px;
-    @include desktop {
-        margin: 10px 5px;
-    }
-    &__description {
-        display: flex;
-        flex-direction: column;
-        justify-items: end;
-        padding-top: 10px;
-        h4 {
-            margin: 0;
-            font-size: 12px;
-        }
-        p {
-            font-size: 10px;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    }
-
-    &__heading {
+.recipe-wrapper {
+    background-color: map-get($colors, primary);
+    .recipe-card-details {
         display: grid;
-        grid-template-columns: 208px 68px;
-        justify-content: space-around;
-        &__img {
-            width: 180px;
-            max-height: 110px;
-            img {
-                width: 180px;
-                max-height: 110px;
-                object-fit: cover;
+        width: 80%;
+        margin: 35px auto;
+        height: auto;
+        &__description {
+            display: flex;
+            flex-direction: column;
+            justify-items: end;
+            padding-top: 10px;
+            margin-top:30px;
+            h4 {
+                margin: 0;
+                font-size: 16px;
+            }
+            p {
+                font-size: 14px;
+            }
+            a:hover {
+                text-decoration: underline;
             }
         }
-    }
-    &__statistic {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
+        &__heading {
+            justify-content: center;
 
-        .icon {
+            &__img {
+                width: 100%;
+                @include for-tablet-and-laptop {
+                    width: 70%;
+                }
+                @include desktop {
+                    width: 50%;
+                }               
+            }          
+        }
+        &__statistic {
             display: flex;
-            align-items: center;
+            flex-direction: row;
+            justify-content: start;
+            margin-top: 10px; 
+        .icon {
+                display: flex;
+                align-items: center;
+                padding-left: 10px;
+                p {
+                    margin: 0 0 0 10px;
+                    font-size: 12px;                  
+                }
+                img {
+                    width: 10px;
+                    height: 10px;
+                }
+            }
+        }      
+        &__buttons {
+            display: flex;
+            width: 130px;
+            justify-content: space-between;
+            a {
+                width: 60px;
+                font-size: 12px;
+            }
+        }
+        .recipe-like {
+            padding-top: 30px;
             p {
-                margin: 0 0 0 10px;
-                font-size: 10px;
+                color: map-get($colors, blue-50);              
+                width: max-content;
+                margin: 0;
             }
             img {
                 width: 10px;
                 height: 10px;
+                display: inline;
             }
         }
-    }
-    &:hover {
-        border: 2px solid map-get($colors, yellow-100);
     }
 }
