--- a/client/src/styles/components/_components-buttons.scss
+++ b/client/src/styles/components/_components-buttons.scss
@@ -3,52 +3,59 @@
 
 .btn {
     box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
-    border-radius:5px;
+    border-radius: 5px;
     border: none;
     outline: none;
     padding: 5px 20px;
     text-transform: uppercase;
-    font-family: 'Indie-Flower', cursive;
+    font-family: "Indie-Flower", cursive;
     &:hover {
         cursor: pointer;
         box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
     }
     &--card {
-        width:60px;
+        width: 60px;
         padding: 2px 0;
         font-size: 10px;
         background: #759302;
-         border: 1px solid #759302;
-         color: #fcfcd6;     
-         text-decoration: none;     
-         text-align: center;
-        
-     }
+        border: 1px solid #759302;
+        color: #fcfcd6;
+        text-decoration: none;
+        text-align: center;
+    }
     &--recipe {
-        background:map-get($colors,secondary-200);
-        border: 1px solid map-get($colors,secondary-200);
-        color: map-get($colors,primary-100);     
-        text-decoration: none;     
+        background: map-get($colors, secondary-200);
+        border: 1px solid map-get($colors, secondary-200);
+        color: map-get($colors, primary-100);
+        text-decoration: none;
         text-align: center;
         width: 215px;
         @include desktop {
-            background: map-get($colors,primary-100);
-            border: 1px solid map-get($colors,secondary-200);
-            color: map-get($colors,secondary-200);
+            background: map-get($colors, primary-100);
+            border: 1px solid map-get($colors, secondary-200);
+            color: map-get($colors, secondary-200);
             height: 35px;
             text-decoration: none;
             padding: 10px 30px;
             width: 150px;
         }
     }
+    &--like {
+        color: rgb(19, 120, 153);
+        padding: 3px 10px;
+    }
+    &--delete {
+        color: rgb(231, 19, 19);
+        padding: 3px 10px;
+    }
     &--main {
-        display: none;        
+        display: none;
         @include desktop {
             display: flex;
             margin-top: 4px;
             background: black;
-            color: map-get($colors,secondary-200);            
-            border: 1px solid map-get($colors,secondary-200);
+            color: map-get($colors, secondary-200);
+            border: 1px solid map-get($colors, secondary-200);
             border-radius: 5px;
             padding: 8px 16px;
             text-decoration: none;
@@ -56,9 +63,9 @@
             transition: color 0.5s ease-out;
         }
         &:hover {
-            color: map-get($colors,secondary-200);
-            border: 1px solid map-get($colors,secondary-200);
-            text-decoration: underline;          
+            color: map-get($colors, secondary-200);
+            border: 1px solid map-get($colors, secondary-200);
+            text-decoration: underline;
         }
-    }  
+    }
 }
