--- a/client/src/styles/components/_components-navigation.scss
+++ b/client/src/styles/components/_components-navigation.scss
@@ -11,7 +11,7 @@
     position: relative;
     @include desktop {
         grid-template-columns: 60% 40%;
-        padding: 20px 0;
+        // padding: 20px 0;
         align-items: center;
     }
     &__item {
