--- a/client/src/components/Errors/_NotFound.scss
+++ b/client/src/components/Errors/_NotFound.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-around;
     width:100%;
     height: 80Vh;
     margin: 0 auto;
@@ -11,8 +12,7 @@
 
     & p{
         font-family: 'Indie- Flower', cursive;
-        font-weight: bold;
-        padding-bottom: 100px;
+        font-weight: bold;      
         color: map-get($colors, secondary);
         text-align: center;
        & img{
@@ -29,7 +29,7 @@
         text-align: center;
     }
     &__img{
-        width:200px;
+        width:100px;
         height: auto;
         padding: 30px 0;
     }    
