--- a/client/src/components/Auth/_Profile.scss
+++ b/client/src/components/Auth/_Profile.scss
@@ -41,9 +41,8 @@
             display: flex;
             justify-content: space-around;
             width: 100%;
-            .disabled {
-                pointer-events: none;
-                opacity: 0.4;
+            &__items.active-container {
+                background-color: map-get($colors, primary-500);
             }
             &__items {
                 border: 1px solid map-get($colors, secondary-200);
