add model comment

--- a/client/src/components/Header/Search/_Search.scss
+++ b/client/src/components/Header/Search/_Search.scss
@@ -43,6 +43,7 @@
     }
     &__search-button {
         display: flex;
-        flex-direction: column;
+        flex-direction: column; 
+        cursor: pointer;     
     }
 }
